recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:3: error: not found: value lenght
avance(lenght)
       ^